5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4428/executions/1630_2940.log
== TEST (2019-04-02 17:03:10) 
-- CODE:
Vi = float(input("Valor inicial: "))
-- ERROR:
File "XXXX", line 8
    valort= round(,2(float(g1+vg2)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:06:25) 
-- CODE:
Vi = float(input("Valor inicial: "))
j = float(input("Taxa de Juros: "))
n = float(input("Numero de Meses: "))

Vf = (Vi*((1+j)**n))

print(round(Vf, 2))
-- OUTPUT:
24798.08
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:41:51) 
-- CODE:
Vi = float(input("Valor inicial: "))
j = float(input("Taxa de Juros: "))
n = float(input("Numero de Meses: "))

Vf = (Vi*((1+j)**n))

print(round(Vf, 2))
-- EXECUTION TIME:
0.150698
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
24798.08
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
13322.3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
